--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "italia-utils-e2e",
+  "name": "io-utils-example",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
+    "@types/nunjucks": "^3.1.3",
     "@types/node-fetch": "^2.5.5",
     "jest": "^25.2.7",
     "ts-jest": "^25.3.1",
